Minimum Viable Glob

--- a/Glob/Views/Home/Index.cshtml
+++ b/Glob/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
             @item.Title
         </div>
         <div class="panel-body">
-            @item.Content
+            @(item.Content)
         </div>
         <div class="panel-footer">
             @item.Date
