--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,16 +17,18 @@
     </environment>
 </head>
 <body>
-    <div class="container body-content ">
+    <div class="container page-header ">
         <h1>Glob</h1>
     </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Kaarel Pärtel</p>
-        </footer>
+        
     </div>
+    <footer class="container">
+        <p>&copy; @DateTime.Now.Year - Kaarel Pärtel</p>
+    </footer>
+
     
     
 
