Typo. Should not hardcode this info.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -55,7 +55,7 @@
                 </tr>
                 <tr>
                     <td>
-                        Spagett-orietneertitud programmeerija
+                        Spagett-orienteertitud programmeerija
                     </td>
                 </tr>
                 <tr>
