--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 @using Microsoft.AspNetCore.Identity
 @using Glob
+@using Glob.Models
 @using Glob.Data.Models
 @using Glob.Models.AccountViewModels
 
