--- a/Views/Posts/Create.cshtml
+++ b/Views/Posts/Create.cshtml
@@ -4,32 +4,45 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Uus postitus</h2>
+<h2>Create</h2>
 
+<h4>Post</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Title" class="control-label">Pealkiri</label>
+                <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Content" class="control-label">Sisu</label>
+                <label asp-for="Content" class="control-label"></label>
                 <textarea asp-for="Content" class="form-control" ></textarea>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Postita" class="btn btn-default" />
+                <label asp-for="Date" class="control-label"></label>
+                <input asp-for="Date" class="form-control" />
+                <span asp-validation-for="Date" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <div class="checkbox">
+                    <label>
+                        <input asp-for="IsInfo" /> @Html.DisplayNameFor(model => model.IsInfo)
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Tagasi</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
