--- a/Views/Posts/Delete.cshtml
+++ b/Views/Posts/Delete.cshtml
@@ -4,36 +4,42 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Kustuta</h2>
+<h2>Delete</h2>
 
-<h3>Oled sa kindel, et soovid postitust kustutada?</h3>
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    
+    <h4>Post</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            Pealkiri
+            @Html.DisplayNameFor(model => model.Title)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Title)
         </dd>
         <dt>
-           Sisu
+            @Html.DisplayNameFor(model => model.Content)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Content)
         </dd>
         <dt>
-            Kuupäev
+            @Html.DisplayNameFor(model => model.Date)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Date)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.IsInfo)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.IsInfo)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="PostId" />
-        <input type="submit" value="Kustuta" class="btn btn-default" /> |
-        <a asp-action="Index">Tagasi</a>
+        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <a asp-action="Index">Back to List</a>
     </form>
 </div>
