--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using Glob.Models
 @using Glob.Data.Models
 @using Glob.Models.AccountViewModels
+@using HeyRed.MarkdownSharp
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
